# 7guis

./: .gitignore  404.html  README.md  bootstrap.d4daba6a.js  index.html  main.3b85860f.js  main.a6fa0101.js  react-static-routes.js  sitemap.xml  static.3a425663.js  static.88ad39f9.js  static.88ad39f9.js.map
Android/: settings.gradle
Android/counter/: build.gradle
Android/crud-kt/: build.gradle
CSharpWPF/: CSharpWpf.sln  readme.md
Clojure-Seesaw/: .classpath  .project  README.md  project.clj
ClojureScript-Om/: .gitignore  README.md  project.clj
Elm/: README.md  counter.elm  counter2.elm  counter3.elm  crud.elm  crud2.elm  flight.elm  temp.elm  temp2.elm  timer.elm  util.elm
FreePascal/: README.md
Java7-Swing/: .project  README.md
Qt5/circledrawer/: CMakeLists.txt  README.md
Qt5/circledrawer/source/: CMakeLists.txt  circle.cpp  circle.h  dialog.cpp  dialog.h  main.cpp  mainwindow.cpp  mainwindow.h  renderarea.cpp  renderarea.h
Qt5/circledrawer/source/undo/: undoableedit.h  undomanager.cpp  undomanager.h
Red/: circle-drawer-with-viz.red  circle-drawer.red  counter.red  crud-mini.red  crud.red  flight-booking-2.red  flight-booking-3.red  flight-booking.red  launcher.red  readme.md  temperature.red  timer-1.red  timer-2.red  timer.red
Scala-ScalaFX/: README.md  build.sbt  pom.xml
Scheme-FrTime/: timer.rkt
contributing/: index.html  routeInfo.json
dimensions/: index.html
implementations/: index.html
more/: index.html  routeInfo.json
site/: .editorconfig  Makefile  package-lock.json  package.json  static.config.js
tasks/: index.html
(+253 files in other folders)
